--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-2">
                     <strong>TECHNOLOGIES MAÎTRISÉES</strong></h3>
                 <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-5">
-                    Retrouvez ce-dessous la liste des technos utilisées dans les projets que je mène :</h4>
+                    Retrouvez ci-dessous la liste des technos utilisées dans les projets que je mène :</h4>
                 <div class="mbr-section-btn align-center"><a class="btn btn-secondary display-4" >VBA</a> <a class="btn btn-secondary display-4" >SQL</a> <a class="btn btn-secondary display-4" >EXCEL</a> <a class="btn btn-secondary display-4" >GOOGLE SCRIPT</a> <a class="btn btn-secondary display-4" >TABLEAU SOFTWARE</a> <a class="btn btn-secondary display-4" >MS ACCESS</a> <a class="btn btn-secondary display-4" >HTML/CSS/JavaScript</a> <a class="btn btn-secondary display-4" >GIT</a><a class="btn btn-secondary display-4" >MARKDOWN</a></div>
             </div>
         </div>
