collection de données de visites

--- a/linkedin.html
+++ b/linkedin.html
@@ -13,6 +13,7 @@
   <link rel="shortcut icon" href="assets/images/logo-128x125.png" type="image/x-icon">
   <meta name="description" content="Retrouvez dans cette rubrique l'ensemble de mes publications LinkedIn: des explorations personnelles, de l'actualité Datas, et bien d'autres !">
   
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   
   <title>Jady Nekena | Publications LinkedIn</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
