--- a/projets-donnees-ouvertes.html
+++ b/projets-donnees-ouvertes.html
@@ -14,6 +14,9 @@
   <meta name="description" content="Retrouvez dans cette rubrique l'ensemble des projets d'exploitation de données ouvertes.">
   
   
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+
+  
   <title>Jady Nekena | Projets sur des données ouvertes</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
