--- a/projets-donnees-personnelles.html
+++ b/projets-donnees-personnelles.html
@@ -13,6 +13,7 @@
   <link rel="shortcut icon" href="assets/images/logo-128x125.png" type="image/x-icon">
   <meta name="description" content="Retrouvez dans cette rubrique l'ensemble des projets d'exploitation de mes données personnelles, issues notamment des plateformes que j'utilise au quotidien.">
   
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   
   <title>Jady Nekena | Projets sur mes données personnelles</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
