--- a/projets-automatisations.html
+++ b/projets-automatisations.html
@@ -13,6 +13,7 @@
   <link rel="shortcut icon" href="assets/images/logo-128x125.png" type="image/x-icon">
   <meta name="description" content="Retrouvez dans cette rubrique l'ensemble de mes projets d'automatisations pratiques, notamment sur VBA, SQL, et Tableau Software. Vous pouvez les télécharger et l'adapter à votre situation.">
   
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   
   <title>Jady Nekena | Projets d'automatisations</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
