--- a/projets-automatisations/index.html
+++ b/projets-automatisations/index.html
@@ -10,21 +10,21 @@
   <meta property="og:image" content="">
   <meta name="twitter:title" content="Jady Nekena | Projets d'automatisations">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/logo-128x125.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../assets/images/logo-128x125.png" type="image/x-icon">
   <meta name="description" content="Retrouvez dans cette rubrique l'ensemble de mes projets d'automatisations pratiques, notamment sur VBA, SQL, et Tableau Software. Vous pouvez les télécharger et l'adapter à votre situation.">
   
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   
   <title>Jady Nekena | Projets d'automatisations</title>
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
-  <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="../assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="../assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="../assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Cabin:400,500,600,700,400i,500i,600i,700i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:400,500,600,700,400i,500i,600i,700i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+  <link rel="preload" as="style" href="../assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="../assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
@@ -44,13 +44,13 @@
 
 
 
-<script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+<script src="../assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="../assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>  <script src="../assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>  <script src="../assets/smoothscroll/smooth-scroll.js"></script>  <script src="../assets/ytplayer/index.js"></script>  <script src="../assets/dropdown/js/navbar-dropdown.js"></script>  <script src="../assets/theme/js/script.js"></script>  
   
   
 <input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-textButton='ACCEPTER' data-cookie-colorButton='#353535' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="Ce site utilise les cookies pour une meilleure expérience. ">
   
   
-    <script type="text/javascript" src="assets/js/common-elements.js"></script>
+    <script type="text/javascript" src="../assets/js/common-elements.js"></script>
 
   </body>
 </html>
