rectifs navbar, rien localhost, contact avec champs

--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
                     <div class="dragArea row">
 
                         <select data-for="motif" class="form-control col-12 form-group mb-3" name="motif" placeholder="motif" data-form-field="motif" id="motif-contact">
-                            <option value="(aucun)">-- MOTIF DE CONTACT --</option>
+                            <option value="">-- MOTIF DE CONTACT --</option>
                             <option value="Renseignements">J'ai besoin de renseignements</option>
                             <option value="Projet">J'ai un projet à discuter</option>
                             <option value="Maintenance">J'aimerais connaître les tarifs</option>
