tag manager + debut social medias

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html  >
 <head>
 
+    <!-- Google Tag Manager -->
+    <script src="assets/js/analytics.js"></script>
+    <!-- End Google Tag Manager -->
 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,6 +18,7 @@
   <meta name="description" content="Experte en exploitation de données depuis 2018, je nettoie, agrège et analyse les données collectées par les entreprises pour les aider à mieux comprendre leur activité et à prendre les meilleures décisions.">
   
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+
   
   <title>Jady Nekena | Data Analyst à Lyon | Faisons parler vos données</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
@@ -36,6 +40,11 @@
   
 </head>
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5HJ4RVH"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <section data-bs-version="5.1" class="header18 cid-t97JNNZlWw mbr-fullscreen mbr-parallax-background" id="header18-1">
 
     
