un peu comme celles de ce site

--- a/index.html
+++ b/index.html
@@ -51,8 +51,13 @@
     <div class="align-center container">
         <div class="row justify-content-center">
             <div class="col-12 col-lg-10">
-                <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>FAISONS PARLER VOS DONNEES.</strong></h1>
-                
+                <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1">
+                    <strong>FAISONS PARLER VOS DONNEES.</strong>
+                    <p class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-4">
+                      <a href="/#dataviz-site-web">(un peu comme celles de ce site)</a>
+                    </p>
+                </h1>
+
                 <p class="mbr-text mbr-fonts-style mbr-white display-7">
                     Experte en <strong>exploitation de données</strong> depuis 2018, je nettoie, agrège et analyse les données collectées par les entreprises pour les aider à <strong>mieux comprendre leur activité</strong> et à <strong>prendre les meilleures décisions</strong>.
                 </p>
@@ -383,7 +388,13 @@
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-2"><strong>DATAVIZ EN TEMPS REEL DU SITE</strong></h3>
 
 
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-6" style="padding: 15%;">Rubrique en cours de construction, merci de votre patience.</h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-6" style="padding: 15%;">
+                    Vous ne rêvez pas. Chaque donnée de traffic sur ce site web sera accessible en temps réel, et téléchargeable à votre guise.
+                    <div class="title col-md-12 col-lg-8" style="width: 100%;">
+                        <h5 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7" style="font-style: italic;padding: 5vh;color: #b5b5b5;">Ce projet est en cours de construction, le temps de collecter un minimum de données exploitables. Merci de votre patience !
+                        </h5>
+                    </div>
+                </h4>
 
 
 
