--- a/index.html
+++ b/index.html
@@ -391,112 +391,12 @@
                 <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-6" style="padding: 15%;">
                     Vous ne rêvez pas. Chaque donnée de traffic sur ce site web sera accessible en temps réel, et téléchargeable à votre guise.
                     <div class="title col-md-12 col-lg-8" style="width: 100%;">
-                        <h5 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7" style="font-style: italic;padding: 5vh;color: #b5b5b5;">Ce projet est en cours de construction, le temps de collecter un minimum de données exploitables. Merci de votre patience !
+                        <h5 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7 remark">Ce projet est en cours de construction, le temps de collecter un minimum de données exploitables. Merci de votre patience !
                         </h5>
                     </div>
                 </h4>
 
-
-
-
-
-
-                    <!--
-
-
-                    Vous ne rêvez pas. Chaque donnée de mon site web est accessible en temps réel, et téléchargeable à votre guise.</h4>
-                        <section data-bs-version="5.1" class="slider2 cid-t9868o8FKw" id="slider2-7">
-            
-
-
-                                <div class="container-fluid">
-                                    <div class="row justify-content-center">
-                                        <div class="col-12 col-md-10 col-lg-12">
-                                            <div class="carousel slide" id="t98wm9W6uV" data-interval="10000" data-bs-interval="10000">
-                                                <div class="mbr-overlay" style="opacity: 0; background-color: rgb(35, 35, 35);">
-                                                </div>
-                                                <ol class="carousel-indicators">
-                                                    <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="/#t98wm9W6uV" data-bs-target="/#t98wm9W6uV"></li>
-                                                    <li data-slide-to="1" data-bs-slide-to="1" data-target="/#t98wm9W6uV" data-bs-target="/#t98wm9W6uV"></li>
-                                                    <li data-slide-to="2" data-bs-slide-to="2" data-target="/#t98wm9W6uV" data-bs-target="/#t98wm9W6uV"></li>
-                                                    <li data-slide-to="3" data-bs-slide-to="3" data-target="/#t98wm9W6uV" data-bs-target="/#t98wm9W6uV"></li>
-                                                    <li data-slide-to="4" data-bs-slide-to="4" data-target="/#t98wm9W6uV" data-bs-target="/#t98wm9W6uV"></li>
-
-                                                </ol>
-                                                <div class="carousel-inner">
-
-                                                    <div class="carousel-item slider-image item active">
-                                                        <div class="item-wrapper">
-                                                            <img class="d-block w-100" src="assets/images/mbr-1900x1141.jpg" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0">
-                                                            <div class="carousel-caption d-none d-md-block">
-                                                                <h5 class="mbr-section-subtitle mbr-fonts-style display-5"><strong>2958 visites au total</strong></h5>
-
-                                                            </div>
-                                                        </div>
-                                                    </div><div class="carousel-item slider-image item">
-                                                        <div class="item-wrapper">
-                                                            <img class="d-block w-100" src="assets/images/mbr-1900x1013.jpg" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1">
-                                                            <div class="carousel-caption d-none d-md-block">
-                                                                <h5 class="mbr-section-subtitle mbr-fonts-style display-5"><strong>12 pays concernés</strong></h5>
-
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="carousel-item slider-image item">
-                                                        <div class="item-wrapper">
-                                                            <img class="d-block w-100" src="assets/images/mbr-2-1900x1267.jpg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2">
-                                                            <div class="carousel-caption d-none d-md-block">
-                                                                <h5 class="mbr-section-subtitle mbr-fonts-style display-5"><strong>47 secondes de temps de visite en moyenne</strong></h5>
-
-                                                            </div>
-                                                        </div>
-                                                    </div><div class="carousel-item slider-image item">
-                                                        <div class="item-wrapper">
-                                                            <img class="d-block w-100" src="assets/images/mbr-1900x1189.jpg" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3">
-                                                            <div class="carousel-caption d-none d-md-block">
-                                                                <h5 class="mbr-section-subtitle mbr-fonts-style display-5"><strong>Jusqu'à 21 prises de contact par mois</strong></h5>
-
-                                                            </div>
-                                                        </div>
-                                                    </div><div class="carousel-item slider-image item">
-                                                        <div class="item-wrapper">
-                                                            <img class="d-block w-100" src="assets/images/mbr-1900x1256.jpg" alt="Mobirise Website Builder" data-slide-to="4" data-bs-slide-to="5">
-                                                            <div class="carousel-caption d-none d-md-block">
-                                                                <h5 class="mbr-section-subtitle mbr-fonts-style display-5"><strong>Et quelques données sur vous...</strong></h5>
-
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="/#t98wm9W6uV">
-                                                    <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
-                                                    <span class="sr-only visually-hidden">Previous</span>
-                                                </a>
-                                                <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="/#t98wm9W6uV">
-                                                    <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
-                                                    <span class="sr-only visually-hidden">Next</span>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="content11 cid-t98siqM1u7 container" id="content11-j">
-                                    <div class="row justify-content-center">
-                                        <div class="col-md-12 col-lg-10">
-                                            <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" >TELECHARGER LES DONNEES BRUTES (CSV)</a></div>
-                                        </div>
-                                    </div>
-                                </div>
-
-
-
-
-
-
-                    -->
-
-                            </section>
+            </section>
 
 
             </div>
@@ -518,10 +418,10 @@
                     <strong>PROJETS ACCOMPLIS</strong></h3>
                 <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7">Pour des raisons de confidentialité, cette rubrique regroupe uniquement des <strong>projets personnels</strong> menés par simple passion d'analyses de données brutes. Vous pouvez toutefois connaître <a href="/#mes-clients" class="text-primary">les entreprises qui m'ont déjà fait confiance</a>.<br><br>Si vous avez un projet d'analyse de données ouvertes, n'hésitez à <a href="/#contact" class="text-primary">me contacter</a>&nbsp;!</h4>
                 <div class="mbr-section-btn align-center">
-                    <a class="btn btn-primary display-4" href="/linkedin">Publications LinkedIn</a>
                     <a class="btn btn-primary display-4" href="/projets-donnees-ouvertes">Données ouvertes</a>
                     <a class="btn btn-primary display-4" href="/projets-donnees-personnelles">Données personnelles</a>
                     <a class="btn btn-primary display-4" href="/projets-automatisations">Automatisations</a>
+                    <a class="btn btn-primary display-4" href="/linkedin">Publications LinkedIn</a>
                 </div>
             </div>
         </div>
