nouveau texte vision globale

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             <span class="mbr-iconfont mbrib-preview" style="color: rgb(34, 153, 170); fill: rgb(34, 153, 170);"></span>
                         </div>
                         <h5 class="card-title mbr-fonts-style display-5"><strong>Vision globale</strong></h5>
-                        <p class="card-text mbr-fonts-style display-7">Les <strong>performances </strong>d'une entreprise sont mesurables à travers les <strong>données nettoyées et centralisées</strong>. En effet, la visualisation intelligible de ces données, la <strong>Dataviz</strong>, permet de rapidement identifier les habitudes des clients, leurs intérêts et leurs attentes. Un tableau de bord bien établi permet d'<strong>identifier efficacement les anomalies</strong>, et ainsi de r<strong>ésoudre les problèmes détectés</strong>.</p>
+                        <p class="card-text mbr-fonts-style display-7">La visualisation intelligible de <strong>données nettoyées et centralisées</strong> racontent l'histoire de votre entreprise. Elles permettent d'évaluer vos <strong>performances </strong>et de révéler des points que parfois vous ne soupçonniez pas : les habitudes de vos clients, leurs intérêts, leurs attentes... Un tableau de bord bien établi permet aussi d'<strong>identifier les anomalies</strong>, et de <strong>résoudre les problèmes détectés</strong>.</p>
                     </div>
                 </div>
             </div>
