--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-white display-4" >JAVA</a> <a class="btn btn-white display-4" >PYTHON</a> <a class="btn btn-white display-4" >C</a> <a class="btn btn-white display-4" >BASH</a> <a class="btn btn-white display-4" >POWERSHELL</a> <a class="btn btn-white display-4" >BAT</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-white display-4" >JAVA</a> <a class="btn btn-white display-4" >PYTHON</a> <a class="btn btn-white display-4" >C</a> <a class="btn btn-white display-4" >BASH</a> <a class="btn btn-white display-4" >POWERSHELL</a> <a class="btn btn-white display-4" >BASH</a><a class="btn btn-white display-4" >BAT</a></div>
             </div>
         </div>
     </div>
@@ -491,8 +491,8 @@
                             <option value="">-- MOTIF DE CONTACT --</option>
                             <option value="Renseignements">J'ai besoin de renseignements</option>
                             <option value="Projet">J'ai un projet à discuter</option>
-                            <option value="Maintenance">J'aimerais connaître les tarifs</option>
                             <option value="Maintenance">J'ai une demande de maintenance</option>
+                            <option value="Maintenance">Je constate un problème sur le site</option>
                             <option value="Autre">Autre motif</option>
   
                         </select>
