--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
                             <option value="Renseignements">J'ai besoin de renseignements</option>
                             <option value="Projet">J'ai un projet à discuter</option>
                             <option value="Maintenance">J'ai une demande de maintenance</option>
-                            <option value="Maintenance">Je constate un problème sur le site</option>
+                            <option value="Site">Je constate un problème sur le site</option>
                             <option value="Autre">Autre motif</option>
   
                         </select>
