--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             <span class="mbr-iconfont mbri-rocket" style="color: rgb(34, 153, 170); fill: rgb(34, 153, 170);"></span>
                         </div>
                         <h5 class="card-title mbr-fonts-style display-5"><strong>Aide à la décision</strong></h5>
-                        <p class="card-text mbr-fonts-style display-7">Grâce à ses données, l'entreprise peut <strong>mettre en place des stratégies d'améliorations </strong>qui l'aideront dans sa croissance. La Dataviz est un outil très puissant pour <strong>prévoir les tendances des données futures</strong>, et ainsi mieux s'y préparer. L'exploitation des données permet ainsi de <strong>comprendre le passé, d'améliorer le présent, et d'anticiper sur le futur</strong>. </p>
+                        <p class="card-text mbr-fonts-style display-7">Grâce à ces données, vous pouvez <strong>mettre en place des stratégies d'améliorations </strong>qui aideront à la croissance de votre entreprise. La Dataviz est un outil très puissant pour <strong>prévoir les tendances des données futures</strong>, et ainsi mieux s'y préparer. L'exploitation des données permet ainsi de <strong>comprendre le passé, d'améliorer le présent, et d'anticiper sur le futur</strong>. </p>
                     </div>
                 </div>
             </div>
@@ -183,6 +183,10 @@
                     </div>
                 </div>
             </div>
+
+
+            <div class="mbr-section-btn mt-3"><a class="btn btn-success display-4" href="/#contact">Travaillons ensemble !</a></div>
+
         </div>
     </div>
 </section>
