--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
                         <select data-for="motif" class="form-control col-12 form-group mb-3" name="motif" placeholder="motif" data-form-field="motif" id="motif-contact">
                             <option value="">-- MOTIF DE CONTACT --</option>
                             <option value="Renseignements">J'ai besoin de renseignements</option>
-                            <option value="Projet">J'ai un projet à discuter</option>
+                            <option value="Projet">J'ai un projet</option>
                             <option value="Maintenance">J'ai une demande de maintenance</option>
                             <option value="Site">Je constate un problème sur le site</option>
                             <option value="Autre">Autre motif</option>
