--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-white display-4" >JAVA</a> <a class="btn btn-white display-4" >PYTHON</a> <a class="btn btn-white display-4" >C</a> <a class="btn btn-white display-4" >BASH</a> <a class="btn btn-white display-4" >POWERSHELL</a> <a class="btn btn-white display-4" >BASH</a><a class="btn btn-white display-4" >BAT</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-white display-4" >JAVA</a> <a class="btn btn-white display-4" >PYTHON</a> <a class="btn btn-white display-4" >C</a> <a class="btn btn-white display-4" >BASH</a> <a class="btn btn-white display-4" >POWERSHELL</a><a class="btn btn-white display-4" >BAT</a></div>
             </div>
         </div>
     </div>
