--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:400,500,600,700,400i,500i,600i,700i&display=swap"></noscript>
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
-  
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   
 </head>
 <body>
@@ -375,7 +375,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-white display-4" >JAVA</a> <a class="btn btn-white display-4" >PYTHON</a> <a class="btn btn-white display-4" >C</a> <a class="btn btn-white display-4" >BASH</a> <a class="btn btn-white display-4" >POWERSHELL</a><a class="btn btn-white display-4" >BAT</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-white display-4" >JAVA</a> <a class="btn btn-white display-4" >PYTHON</a> <a class="btn btn-white display-4" >C</a> <a class="btn btn-white display-4" >BASH</a> <a class="btn btn-white display-4" >POWERSHELL</a><a class="btn btn-white display-4" >RETOOL</a></div>
             </div>
         </div>
     </div>
@@ -390,15 +390,28 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-2"><strong>DATAVIZ EN TEMPS REEL DU SITE</strong></h3>
+                <h5 class="align-center">Vous ne rêvez pas. Les données de traffic sur ce site web sont accessibles en temps réel et téléchargeables à votre guise.
+                </h5>
+                <div class="align-center">
+                    <div class="a-dataviz">
+                        <iframe src="https://jadynekena.retool.com/embedded/public/1e175d1a-9005-44a9-92c0-ceed6de1079e" style="height: 690px;"></iframe>
+                        <div id="download" onclick="download()" class="retool"><button id="btn-download" class="btn btn-black display-4" hidden> Télécharger les données</button></div>
+                    </div>
 
+                    <span class="align-center mbr-fonts-style mb-4 display-7 remark">
+                        <br>Ce projet est en cours de construction : de nouveaux indicateurs seront publiés à chaque fin de semaine 🚀
+                    </span>
+                </div>
 
+                <!--
                 <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-6" style="padding: 15%;">
-                    Vous ne rêvez pas. Chaque donnée de traffic sur ce site web sera accessible en temps réel, et téléchargeable à votre guise.
+                    Vous ne rêvez pas. Chaque donnée de traffic sur ce site web sera accessible en temps réel, et téléchargeable à votre guise.                    
                     <div class="title col-md-12 col-lg-8" style="width: 100%;">
                         <h5 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7 remark">Ce projet est en cours de construction, le temps de collecter un minimum de données exploitables. Merci de votre patience !
                         </h5>
                     </div>
                 </h4>
+                -->
 
             </section>
 
