--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                 <div class="align-center">
                     <div class="a-dataviz">
                         <iframe src="https://jadynekena.retool.com/embedded/public/1e175d1a-9005-44a9-92c0-ceed6de1079e" style="height: 690px;"></iframe>
-                        <div id="download" onclick="download()" class="retool"><button id="btn-download" class="btn btn-black display-4" hidden> Télécharger les données</button></div>
+                        <div class="retool"><button onclick="download()" id="btn-download" class="btn btn-black display-4" hidden> Télécharger les données</button></div>
                     </div>
 
                     <span class="align-center mbr-fonts-style mb-4 display-7 remark">
