--- a/DATAVIZ/index.html
+++ b/DATAVIZ/index.html
@@ -29,7 +29,7 @@
 			<div  class="labels-container">
 				<div class="viz-label">
 					<div class="viz-title">IP uniques</div>
-					<div class="viz-text"></div>
+					<div class="viz-text">L'adresse IP représente l'identité de votre appareil lorsqu'il est connecté à un réseau. **1 IP = 1 utilisateur unique.**</div>
 					<div class="viz-tooltip"></div>
 				</div>
 				<div class="viz-label">
