--- a/index.html
+++ b/index.html
@@ -395,16 +395,10 @@
                 </h5>
                 <div class="align-center">
                     <div class="a-dataviz">
-                        <iframe src="https://jadynekena.retool.com/embedded/public/1e175d1a-9005-44a9-92c0-ceed6de1079e" style="height: 690px;"></iframe>
-                        <div class="retool"><button onclick="download()" id="btn-download" class="btn btn-black display-4" hidden> Télécharger les données</button></div>
+                        <iframe src="/DATAVIZ/"></iframe>
                     </div>
-
-                    <span class="align-center mbr-fonts-style mb-4 display-7 remark">
-                        <br>Ce projet est en cours de construction : de nouveaux indicateurs seront publiés à chaque fin de semaine 🚀
-                    </span>
                 </div>
                 -->
-
 
                 <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-6" style="padding: 15%;">
                     Vous ne rêvez pas. Chaque donnée de traffic sur ce site web sera accessible en temps réel, et téléchargeable à votre guise.                    
