rectif hauteur viz

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 
     
     
-    <div class="container">
+    <div>
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-2"><strong>DATAVIZ EN TEMPS REEL DU SITE</strong></h3>
