new tooltip + 2affluences

--- a/DATAVIZ/index.html
+++ b/DATAVIZ/index.html
@@ -72,7 +72,12 @@
 
 
 			<div class="chart">
-				<div class="viz-title">Affluences par horaire</div>					
+				<div class="viz-title theme themeViz">Affluences par
+					<select onchange="refresh_viz1()" id="type_affluence">
+					  <option value="h">Heure</option>
+					  <option value="d">Jour</option>
+					</select>
+				</div>			
 				<div class="viz-tooltip"></div>
 				<div class="chart-element affluence"></div>
 			</div>
