no log in console

--- a/DATAVIZ/index.html
+++ b/DATAVIZ/index.html
@@ -72,7 +72,7 @@
 
 
 			<div class="chart">
-				<div class="viz-title theme themeViz">Affluences par
+				<div class="viz-title">Affluences par
 					<select onchange="refresh_viz1()" id="type_affluence">
 					  <option value="h">Heure</option>
 					  <option value="d">Jour</option>
