--- a/DATAVIZ/index.html
+++ b/DATAVIZ/index.html
@@ -25,6 +25,7 @@
 </head>
 <body>
 	<div class="themeViz" hidden></div>
+	<div class="chart-tooltip"></div>
 
 	<div class="grid-container conteneurDashboard">
 		<div class="viz" id="viz1">
