--- a/DATAVIZ/index.html
+++ b/DATAVIZ/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 	<div class="themeViz" hidden></div>
-	<div class="chart-tooltip"></div>
+	<span class="current_tooltip"></span>
 
 	<div class="grid-container conteneurDashboard">
 		<div class="viz" id="viz1">
@@ -33,29 +33,24 @@
 				<div class="viz-label">
 					<div class="viz-title">IP uniques</div>
 					<div class="viz-text"></div>
-					<div class="viz-tooltip"></div>
 				</div>
 				<div class="viz-label">
 					<div class="viz-title">Visites uniques</div>
 					<div class="viz-text"></div>
-					<div class="viz-tooltip"></div>
 				</div>
 				<div class="viz-label">
 					<div class="viz-title">Clics</div>
 					<div class="viz-text"></div>
-					<div class="viz-tooltip"></div>
 				</div>
 				<div class="viz-label">
 					<div class="viz-title">Clics par visite (moyenne)</div>
 					<div class="viz-text"></div>
-					<div class="viz-tooltip"></div>
 				</div>
 			</div>
 
 
 			<div class="chart">
-				<div class="viz-title">Evolution nombre de visites</div>					
-				<div class="viz-tooltip"></div>
+				<div class="viz-title">Evolution nombre de visites</div>		
 				<div class="chart-element"></div>
 			</div>
 
@@ -66,7 +61,6 @@
 		<div  class="viz" id="viz2">
 			<div class="viz-label">
 				<div class="viz-title">Part des appareils mobiles</div>
-				<div class="viz-tooltip"></div>
 			</div>
 			<div class="viz-gauge"></div>
 
@@ -79,7 +73,6 @@
 					  <option value="d">Jour</option>
 					</select>
 				</div>			
-				<div class="viz-tooltip"></div>
 				<div class="chart-element affluence"></div>
 			</div>
 		</div>
