no tooltip on select

--- a/DATAVIZ/index.html
+++ b/DATAVIZ/index.html
@@ -51,12 +51,12 @@
 
 			<div class="chart">
 				<div class="viz-title"><span>Evolution nombre de 
+					</span>
 					<select onchange="refresh_viz1_evolutions()" id="type_evolution">
 					  <option value="adresse_ip">IP</option>
 					  <option value="visite">visites</option>
 					  <option value="clic">clics</option>
-					</select></span>
-
+					</select>
 				</div>		
 				<div class="chart-element"></div>
 			</div>
@@ -75,10 +75,11 @@
 
 			<div class="chart">
 				<div class="viz-title"><span>Affluences par
+					</span>
 					<select onchange="refresh_viz1_affluences()" id="type_affluence">
 					  <option value="h">heure</option>
 					  <option value="d">jour</option>
-					</select></span>
+					</select>
 				</div>			
 				<div class="chart-element affluence"></div>
 			</div>
