--- a/index.html
+++ b/index.html
@@ -390,16 +390,15 @@
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-2"><strong>DATAVIZ EN TEMPS REEL DU SITE</strong></h3>
 
-                <!--
-                <h5 class="align-center">Vous ne rêvez pas. Les données de traffic sur ce site web sont accessibles en temps réel et téléchargeables à votre guise.
+                <h5 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7">Vous ne rêvez pas. Les données de traffic sur ce site web sont accessibles <strong>en temps réel</strong>, et <strong>bientôt téléchargeables</strong> à votre guise.
                 </h5>
                 <div class="align-center">
                     <div class="a-dataviz">
                         <iframe src="/DATAVIZ/"></iframe>
                     </div>
                 </div>
-                -->
 
+                <!--
                 <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-6" style="padding: 15%;">
                     Vous ne rêvez pas. Chaque donnée de traffic sur ce site web sera accessible en temps réel, et téléchargeable à votre guise.                    
                     <div class="title col-md-12 col-lg-8" style="width: 100%;">
@@ -407,6 +406,7 @@
                         </h5>
                     </div>
                 </h4>
+                -->
 
             </section>
 
