--- a/DATAVIZ/index.html
+++ b/DATAVIZ/index.html
@@ -17,7 +17,6 @@
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/alasql"></script>	
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.3.3/echarts.min.js"></script>
-	<script src="./utile.js"></script>
 
 
 
@@ -88,15 +87,8 @@
 	</div>
 
 
-	<script type="text/javascript">
-
-
-
-
-
-
-
-	</script>
+	<script type="text/javascript" src="/assets/js/common-elements.js"></script>
+	<script src="./utile.js"></script>
 
 </body>
 </html>
